[gd_scene load_steps=22 format=1]

[ext_resource path="res://main/ship_select.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/kenvector_future.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://main/ship_selector.gd" type="Script" id=3]
[ext_resource path="res://assets/player_light.png" type="Texture" id=4]
[ext_resource path="res://assets/player_medium.png" type="Texture" id=5]
[ext_resource path="res://assets/player_heavy.png" type="Texture" id=6]

[sub_resource type="DynamicFont" id=1]

font/size = 20
font/use_mipmaps = false
font/use_filter = false
font/font = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=2]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0
bg_color = Color( 0.2, 0.2, 0.333333, 0.2 )
light_color = Color( 0.8, 0.8, 0.8, 1 )
dark_color = Color( 0.8, 0.8, 0.8, 1 )
border_size = 0
border_blend = true
draw_bg = true

[sub_resource type="StyleBoxFlat" id=3]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0
bg_color = Color( 0.0666667, 0.0666667, 0.2, 0.0666667 )
light_color = Color( 0.8, 0.8, 0.8, 1 )
dark_color = Color( 0.8, 0.8, 0.8, 1 )
border_size = 0
border_blend = true
draw_bg = true

[sub_resource type="DynamicFont" id=4]

font/size = 16
font/use_mipmaps = false
font/use_filter = false
font/font = ExtResource( 2 )

[sub_resource type="DynamicFont" id=5]

font/size = 11
font/use_mipmaps = false
font/use_filter = false
font/font = ExtResource( 2 )

[sub_resource type="DynamicFont" id=6]

font/size = 12
font/use_mipmaps = false
font/use_filter = false
font/font = ExtResource( 2 )

[sub_resource type="DynamicFont" id=7]

font/size = 12
font/use_mipmaps = false
font/use_filter = false
font/font = ExtResource( 2 )

[sub_resource type="DynamicFont" id=8]

font/size = 16
font/use_mipmaps = false
font/use_filter = false
font/font = ExtResource( 2 )

[sub_resource type="DynamicFont" id=9]

font/size = 11
font/use_mipmaps = false
font/use_filter = false
font/font = ExtResource( 2 )

[sub_resource type="DynamicFont" id=10]

font/size = 12
font/use_mipmaps = false
font/use_filter = false
font/font = ExtResource( 2 )

[sub_resource type="DynamicFont" id=11]

font/size = 16
font/use_mipmaps = false
font/use_filter = false
font/font = ExtResource( 2 )

[sub_resource type="DynamicFont" id=12]

font/size = 11
font/use_mipmaps = false
font/use_filter = false
font/font = ExtResource( 2 )

[sub_resource type="DynamicFont" id=13]

font/size = 12
font/use_mipmaps = false
font/use_filter = false
font/font = ExtResource( 2 )

[sub_resource type="DynamicFont" id=14]

font/size = 16
font/use_mipmaps = false
font/use_filter = false
font/font = ExtResource( 2 )

[sub_resource type="Animation" id=15]

length = 0.5
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("ship_selection:rect/pos")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.5 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -400, 224 ), Vector2( 64, 224 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("panel_light:rect/pos")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0, 0.5 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -400, 256 ), Vector2( 64, 256 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("panel_medium:rect/pos")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = {
"times": FloatArray( 0, 0.5 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 464, 768 ), Vector2( 464, 256 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("panel_heavy:rect/pos")
tracks/3/interp = 1
tracks/3/imported = false
tracks/3/keys = {
"times": FloatArray( 0, 0.5 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1328, 256 ), Vector2( 864, 256 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("back_button:rect/pos")
tracks/4/interp = 1
tracks/4/imported = false
tracks/4/keys = {
"times": FloatArray( 0, 0.5 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -400, 640 ), Vector2( 64, 640 ) ]
}

[node name="Container" type="Container"]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0
script/script = ExtResource( 1 )

[node name="ship_selection" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -400.0
margin/top = 224.0
margin/right = -38.0
margin/bottom = 247.0
custom_fonts/font = SubResource( 1 )
text = "SHIP SELECTION"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="panel_light" type="Panel" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -400.0
margin/top = 256.0
margin/right = -40.0
margin/bottom = 600.0
script/script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}
player_type = 0

[node name="select_button" type="Button" parent="panel_light"]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
flat = true

[node name="title" type="Label" parent="panel_light"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 16.0
margin/top = 32.0
margin/right = 152.0
margin/bottom = 67.0
custom_fonts/font = SubResource( 4 )
text = "LIGHT"
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="title2" type="Label" parent="panel_light"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 80.0
margin/top = 32.0
margin/right = 216.0
margin/bottom = 67.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0.333333, 0.333333, 0.333333, 1 )
text = "(easy)"
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="ship_sprite" type="Sprite" parent="panel_light"]

transform/pos = Vector2( 304, 48 )
transform/scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 4 )

[node name="description" type="Label" parent="panel_light"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 16.0
margin/top = 96.0
margin/right = 343.0
margin/bottom = 158.0
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0.333333, 0.333333, 0.333333, 1 )
text = "Nimble and quick, with high manoeuvrability and rate of fire.  Weak shields and bullets.  A good choice for a spray and pray type approach."
autowrap = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="stat_descriptions" type="Label" parent="panel_light"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 16.0
margin/top = 176.0
margin/right = 184.0
margin/bottom = 328.0
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 0.666667, 0.666667, 0.666667, 1 )
custom_constants/line_spacing = -2
text = "Maximum Velocity:

Rotation Speed:

Thrust:

Shields:

Fire Rate:

Bullet Strength:"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="stat_values" type="Label" parent="panel_light"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 221.0
margin/top = 176.0
margin/right = 344.0
margin/bottom = 328.0
custom_fonts/font = SubResource( 7 )
custom_constants/line_spacing = -2
text = "500

3.5

600

50

5

30"
align = 2
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="panel_medium" type="Panel" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 464.0
margin/top = 768.0
margin/right = 824.0
margin/bottom = 1112.0
script/script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}
player_type = 1

[node name="select_button" type="Button" parent="panel_medium"]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
flat = true

[node name="title" type="Label" parent="panel_medium"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 16.0
margin/top = 32.0
margin/right = 152.0
margin/bottom = 67.0
custom_fonts/font = SubResource( 8 )
text = "MEDIUM"
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="title1" type="Label" parent="panel_medium"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 103.0
margin/top = 32.0
margin/right = 199.0
margin/bottom = 67.0
custom_fonts/font = SubResource( 8 )
custom_colors/font_color = Color( 0.333333, 0.333333, 0.333333, 1 )
text = "(normal)"
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="ship_sprite" type="Sprite" parent="panel_medium"]

transform/pos = Vector2( 304, 48 )
transform/scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 5 )

[node name="description" type="Label" parent="panel_medium"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 16.0
margin/top = 96.0
margin/right = 343.0
margin/bottom = 158.0
custom_fonts/font = SubResource( 9 )
custom_colors/font_color = Color( 0.333333, 0.333333, 0.333333, 1 )
text = "A good all-rounder, without excelling at anything in particular.  Middle of the road class war terra nullius blu-hoos."
autowrap = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="stat_descriptions" type="Label" parent="panel_medium"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 16.0
margin/top = 176.0
margin/right = 184.0
margin/bottom = 328.0
custom_fonts/font = SubResource( 10 )
custom_colors/font_color = Color( 0.666667, 0.666667, 0.666667, 1 )
custom_constants/line_spacing = -2
text = "Maximum Velocity:

Rotation Speed:

Thrust:

Shields:

Fire Rate:

Bullet Strength:"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="stat_values" type="Label" parent="panel_medium"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 221.0
margin/top = 176.0
margin/right = 344.0
margin/bottom = 328.0
custom_fonts/font = SubResource( 10 )
custom_constants/line_spacing = -2
text = "400

2.5

500

75

2.5

60"
align = 2
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="panel_heavy" type="Panel" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 1328.0
margin/top = 256.0
margin/right = 1688.0
margin/bottom = 600.0
script/script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}
player_type = 2

[node name="select_button" type="Button" parent="panel_heavy"]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
flat = true

[node name="title" type="Label" parent="panel_heavy"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 16.0
margin/top = 32.0
margin/right = 152.0
margin/bottom = 67.0
custom_fonts/font = SubResource( 11 )
text = "HEAVY"
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="title1" type="Label" parent="panel_heavy"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 89.0
margin/top = 32.0
margin/right = 225.0
margin/bottom = 67.0
custom_fonts/font = SubResource( 11 )
custom_colors/font_color = Color( 0.333333, 0.333333, 0.333333, 1 )
text = "(hard)"
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="ship_sprite" type="Sprite" parent="panel_heavy"]

transform/pos = Vector2( 304, 48 )
transform/scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 6 )

[node name="description" type="Label" parent="panel_heavy"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 16.0
margin/top = 96.0
margin/right = 343.0
margin/bottom = 158.0
custom_fonts/font = SubResource( 12 )
custom_colors/font_color = Color( 0.333333, 0.333333, 0.333333, 1 )
text = "Powerful and slow.  Able to destroy any asteroid in a single shot, but you'll need to be precise.  For experts only."
autowrap = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="stat_descriptions" type="Label" parent="panel_heavy"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 16.0
margin/top = 176.0
margin/right = 184.0
margin/bottom = 328.0
custom_fonts/font = SubResource( 13 )
custom_colors/font_color = Color( 0.666667, 0.666667, 0.666667, 1 )
custom_constants/line_spacing = -2
text = "Maximum Velocity:

Rotation Speed:

Thrust:

Shields:

Fire Rate:

Bullet Strength:"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="stat_values" type="Label" parent="panel_heavy"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 221.0
margin/top = 176.0
margin/right = 344.0
margin/bottom = 328.0
custom_fonts/font = SubResource( 13 )
custom_constants/line_spacing = -2
text = "300

1.5

400

100

1.6

100"
align = 2
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="back_button" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -400.0
margin/top = 640.0
margin/right = -190.0
margin/bottom = 692.0
custom_fonts/font = SubResource( 14 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "BACK"
flat = false

[node name="animation" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/menu = SubResource( 15 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = "menu"


